Add textRegion and adjust CSS

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,7 @@
 @import 'bootstrap'
 
+@import 'mixins/slight_bottom_margin'
+
 @import 'apps/base'
 @import 'apps/header'
+@import 'apps/workspace'
